last style and seo

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description-Yoga-Etampes-Gym" content= "Site internet vitrine de l'Association arc-en-ciel proposant des cours de yoga à proximité d'Etampes" />
+    <meta name= "keywords" content= "cours yoga, yoga, hatha-yoga, yoga doux, Etampes , Yoga , prendre des cours de yoga, yoga cours, yoga cours Etampes, cours yoga proche Etampes" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
