add seo google meta

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       name="keywords"
       content="cours yoga, yoga, hatha-yoga, yoga doux, Etampes , Yoga , prendre des cours de yoga, yoga cours, yoga cours Etampes, cours yoga proche Etampes,deGasquet, Essonne, 91"
     />
+    <meta
+      name="google-site-verification"
+      content="USR5n6iTTba9BS6qELvxeplw6Xlt18U1a-omJWqWF1o"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
