add googlesearch meta

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="google-site-verification"
-      content="USR5n6iTTba9BS6qELvxeplw6Xlt18U1a-omJWqWF1o"
+      content="J4nMA8P5zaEHsqIfOPnwfhPAzphj82LaHM_nz5aMJXk"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -27,7 +27,7 @@
     />
     <meta
       name="description"
-      content="Site internet vitrine de l'Association arc-en-ciel proposant des cours de yoga à proximité d'Etampes"
+      content=" Nathalie Leblanc professeur de yoga, propose des cours de hatha-yoga basés sur la à proximité d'Etampes"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
