commit fo customers

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
     <meta
       name="keywords"
-      content="cours yoga, yoga, hatha-yoga, yoga doux, Etampes , Yoga , prendre des cours de yoga, yoga cours, yoga cours Etampes, cours yoga proche Etampes,deGasquet, Essonne, 91"
+      content=" yoga sud etampes, sud , cours yoga, yoga, hatha-yoga, yoga doux, Etampes , Yoga , prendre des cours de yoga, yoga cours, yoga cours Etampes, cours yoga proche Etampes,deGasquet, Essonne, 91"
     />
     <meta
       name="google-site-verification"
@@ -27,7 +27,7 @@
     />
     <meta
       name="description"
-      content=" Nathalie Leblanc professeur de yoga, propose des cours de hatha-yoga basés sur la à proximité d'Etampes"
+      content="Nathalie Leblanc propose des cours collectifs de yoga dans l'esprit de la méthode deGasquet. Salle privée au calme. 12 kilomètres sud Etampes 91"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -43,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Yoga-Etampes: Association Arc-En-Ciel</title>
+    <title>Yoga-Etampes: Asso Arc-En-Ciel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
