fixed orthographe error and ref

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <meta
       name="keywords"
-      content=" yoga sud etampes, sud , cours yoga, yoga, hatha-yoga, yoga doux, Etampes , Yoga , prendre des cours de yoga, yoga cours, yoga cours Etampes, cours yoga proche Etampes,deGasquet, Essonne, 91"
+      content=" yoga etampes,YOGA ETAMPES,yoga sud etampes, sud , cours yoga, yoga, hatha-yoga, yoga doux, Etampes , Yoga , prendre des cours de yoga, yoga cours, yoga cours Etampes, cours yoga proche Etampes,deGasquet, Essonne, 91"
     />
     <meta
       name="google-site-verification"
@@ -42,7 +42,7 @@
     />
     <meta
       name="description"
-      content="Nathalie Leblanc propose des cours collectifs de yoga dans l'esprit de la méthode deGasquet. Salle privée au calme. 12 kilomètres sud Etampes 91"
+      content=" Yoga Etampes - Nathalie Leblanc propose des cours collectifs de yoga dans l'esprit de la méthode deGasquet. Salle privée au calme. 12 kilomètres sud Etampes 91"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
